# media_monitor

./: .clang-format  .gitignore  CMakeLists.txt  README.md  sample.html  sample2.html  sample3.html  vcpkg.json
.github/workflows/: build-release.yml  cmake-single-platform.yml
src/: main.cpp  media_session.cpp  media_session.hpp  settings.cpp  settings.hpp  terminal_ui.cpp  terminal_ui.hpp  track_info.hpp  websocket_server.cpp  websocket_server.hpp  websocket_session.cpp  websocket_session.hpp
